--- a/src/components/pages/home/contactus/ContactUs.css
+++ b/src/components/pages/home/contactus/ContactUs.css
@@ -70,7 +70,7 @@
   position: relative;
   margin-block-start: 0.25rem;
   border-radius: 47% 53% 45% 55% / 12% 9% 90% 88%;
-  background: linear-gradient(to right, rgb(253, 136, 2) 35%, gray);
+  background: linear-gradient(to right, #f14902 35%, gray);
 }
 .hand {
   position: absolute;
